# j34web_django

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
django_project/: .env  apps.py  asgi.py  settings.py  urls.py
django_project/templates/: base.html
django_project/templatetags/: cache_bust.py  markitup.py  my_templatetag.py  this_year.py
django_project/tests/: test_admin.py  test_views.py
iubase_players/: admin.py  apps.py  models.py  views.py
iubase_players/migrations/: 0001_initial.py  0002_rename_photos_photo_alter_transaction_date_announced.py  0003_alter_transaction_date_announced.py  0004_player_country_player_state.py  0005_alter_academic_degree_date_alter_article_date_and_more.py  0006_alter_academic_degree_date_alter_article_date_and_more.py  0007_alter_transaction_pro_org.py  0008_alter_transaction_draft_round_and_more.py  0009_alter_academic_degree_level_alter_academic_major_and_more.py  0010_alter_transaction_draft_round_and_more.py  0011_season_alter_transaction_draft_round.py  0012_alter_transaction_jersey.py  0013_alter_accolade_season_alter_transaction_season.py
j34main/: admin.py  apps.py  forms.py  html_to_md.py  models.py  tests.py  urls.py  view_logic.py  views.py
j34main/migrations/: 0001_initial.py  0002_content_author.py  0003_content_teaser.py  0004_content_image_caption.py  0005_category.py  0006_content_category.py  0007_remove_content_category_content_category.py  0008_remove_content_category.py  (+7 more)
j34web_django/: asgi.py  settings.py  urls.py  views.py  wsgi.py
logs/: dummy.txt
pitch_tracker/: urls.py
(+52 files in other folders)
