[project]
name = "j34_web_django"
version = "2025.06.03.a"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "coverage==7.8.2",
    "django==5.2.1",
    "execnet==2.1.1",
    "iniconfig==2.1.0",
    "markdown==3.8",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "pytest-django==4.11.1",
    "pytest-xdist==3.7.0",
    "python-dotenv==1.1.0",
    "sqlparse==0.5.3",
]

[tool.uv]
package = false
