[project]
name = "j34_web_django"
version = "2026.5.31.1201"
requires-python = "==3.14.5"
dependencies = [
    "asgiref==3.11.1",
    "coverage==7.14.1",
    "django==6.0.5",
    "execnet==2.1.2",
    "gunicorn>=26.0.0",
    "iniconfig==2.3.0",
    "markdown==3.10.2",
    "packaging==26.2",
    "pluggy==1.6.0",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-xdist==3.8.0",
    "python-dotenv==1.2.2",
    "sqlparse==0.5.5",
]

[tool.uv]
package = false

[tool.ruff]
extend-exclude = ["tests"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings"
python_files = "test_*.py"
